CNF functionality added to the gui

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -21,7 +21,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="GrammarTab">
        <attribute name="title">
@@ -61,7 +61,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton">
+             <widget class="QPushButton" name="SaveCNF">
               <property name="text">
                <string>SaveCNF</string>
               </property>
